--- a/_posts/2019-03-18-amicus.markdown
+++ b/_posts/2019-03-18-amicus.markdown
@@ -3,8 +3,8 @@ title: The Mathematicians' Brief in Rucho v. Common Cause
 date: 2019-03-18 00:00:00 Z
 permalink: "/amicus"
 categories:
-- collections
-- news
+    - collections
+    - news
 layout: post
 authors: MGGG
 featured: true
@@ -13,7 +13,9 @@ excerpt_separator: "<!--more-->"
 
 MGGG has organized a collaborative effort of mathematical and legal experts to file an amicus brief for the upcoming Supreme Court gerrymandering cases. An amicus brief is a "friend of the court" filing, where outside parties try to help supply the court with useful information.
 
-[Read the mathematicians' brief.](https://mggg.org/SCOTUS-MathBrief.pdf)<!--more-->
+[Read the mathematicians' brief.](https://mggg.org/SCOTUS-MathBrief.pdf)
+
+<!--more-->
 
 ## Backstory
 
@@ -27,10 +29,11 @@ Here's how our argument goes:
 -   When it comes to partisanship, the neutral baseline is harder to find. But there is a reliable, well-developed mathematical technique called [MCMC](https://en.wikipedia.org/wiki/Markov_chain_Monte_Carlo) that's up to the job, and that scopes out how districts will tend to divide up a state if only the written rules are taking into account, and the voting patterns are held constant.
 -   A district that's an extreme outlier is probably a gerrymander!
 
-For instance, here is a plot showing one North Carolina district from the Legislature's 2016 Plan. The bell curve is a histogram of a million plans sampled by MCMC. <!-- TODO: add second figure and fix the text -->
+For instance, here are plots showing two North Carolina districts from the Legislature's 2016 Plan. The bell curves are histograms of a million plans sampled by MCMC.
 
 <figure class="figure">
-<img src="/static/images/amicus-plot1.png" alt="A bell curve with two outlier points labeled 2012 Plan and 2016 plan, and one point labeled Judges' Plan closer to the center">
+<img src="/uploads/amicus-plot1.png" alt="A bell curve with two outlier points labeled 2012 Plan and 2016 plan, and one point labeled Judges' Plan close to the center">
+<img src="/uploads/amicus-plot2.png" alt="A bell curve with two outlier points labeled 2012 Plan and 2016 plan, and one point labeled Judges' Plan close to the center">
 </figure>
 
 (2012 Plan and 2016 Plan were proposed and enacted by the NC Legislature. The [Judges' Plan](https://sanford.duke.edu/articles/nonpartisan-redistricting-panel-reveals-unofficial-nc-congressional-voting-map), by contrast, was made by a bipartisan panel of retired judges.) In the 2012 and 2016 Plans, Democrats are "packed" or overstuffed into the right-hand district and "cracked" or dispersed out of the left-hand district.
