Turn all works into posts

--- a/_posts/2017-11-08-metrics.md
+++ b/_posts/2017-11-08-metrics.md
@@ -1,11 +1,12 @@
 ---
-title: 'Gerrymandering metrics: How to measure? What’s the baseline?'
+title: "Gerrymandering metrics: How to measure? What’s the baseline?"
 date: 2017-11-08 00:00:00 Z
 authors: Moon Duchin
-type: survey
-publication: Bulletin of the American Academy for Arts and Sciences, Winter 2018.
+categories:
+  - outreach
+publication:
+  Bulletin of the American Academy for Arts and Sciences, Winter 2018.
 href: https://arxiv.org/abs/1801.02064
 pdf: https://arxiv.org/pdf/1801.02064.pdf
 video: https://www.amacad.org/content/events/eventOverview.aspx?v=1&amp;e=10378
 ---
-
