--- a/_posts/2017-10-01-reboot.md
+++ b/_posts/2017-10-01-reboot.md
@@ -2,9 +2,9 @@
 title: Rebooting the mathematics behind gerrymandering
 date: 2017-10-01 00:00:00 Z
 authors: Moon Duchin and Peter Levine
-type: survey
+categories:
+  - outreach
 publication: The Conversation
 publication_date: 2017-10-01 00:00:00 Z
 href: https://theconversation.com/rebooting-the-mathematics-behind-gerrymandering-73096
 ---
-
