--- a/_posts/2018-08-01-ei.md
+++ b/_posts/2018-08-01-ei.md
@@ -5,7 +5,6 @@ authors: VRDI
 description: |2-
    Ecological inference (EI) is the main statistical technique used to establish racially polarized voting (RPV). A team at the 2018 Voting Rights Data Institute created R Shiny apps making it possible for anyone to run an ecological inference analysis.
   <ul> <li><a href="http://tinyurl.com/gerryEI" target="_blank">Interactive introduction to EI</a></li> <li><a href="https://vrdi.shinyapps.io/ei-app/" target="_blank">2x2</a> tool, for two racial groups and two candidates;</li> <li><a href="https://vrdi.shinyapps.io/ei-app-RxC/" target="_blank">RxC</a> tool, for more groups and candidates.</li> </ul>
-type: code
+categories: [code]
 href: https://vrdi.shinyapps.io/ei-app/
 ---
-
