Update post organization.  Split Outreach into Basics and Interactives.  Update Precincts Shapefiles post.

--- a/_posts/2019-07-08-distflow.md
+++ b/_posts/2019-07-08-distflow.md
@@ -2,7 +2,7 @@
 title: District-Shortening Flow
 authors: Zachary I. Schutzman
 categories:
-  - outreach
+  - interactives
 description:
   Use curve-shortening flow to analyze the geometric shape of electoral
   districts, with interactive widgets and visualizations.
