--- a/_posts/2017-11-08-metrics.md
+++ b/_posts/2017-11-08-metrics.md
@@ -3,7 +3,7 @@ title: "Gerrymandering metrics: How to measure? What’s the baseline?"
 date: 2017-11-08 00:00:00 Z
 authors: Moon Duchin
 categories:
-  - outreach
+  - basics
 publication:
   Bulletin of the American Academy for Arts and Sciences, Winter 2018.
 href: https://arxiv.org/abs/1801.02064
