--- a/_posts/2019-06-14-mit-viz.md
+++ b/_posts/2019-06-14-mit-viz.md
@@ -1,7 +1,7 @@
 ---
 title: "MIT student project: Visualizing Gerrymandering"
 categories:
-  - outreach
+  - interactives
 authors: MGGG
 href: https://mggg.org/mit-visualization-project/
 description: "
