--- a/_posts/2019-10-21-lowell.md
+++ b/_posts/2019-10-21-lowell.md
@@ -12,8 +12,8 @@ permalink: /lowell
 Two years ago, the City of Lowell was sued because its system of election prevented minority communities from being represented in city government. For example, even though there are 9 members of the City Council—and nearly half of Lowell’s population is Asian or Hispanic—there have only been 2 people of color elected to the City Council in 20 years!
 
 We have two reports, which you can download here:
-* [Community-Centered Redistricting in Lowell, Massachusetts](/Lowell-Report.pdf), is an introduction to ranked choice voting (RCV) and districts and the choice on the ballot in November.
-* [Findings on the City of Lowell’s Election Systems](/Lowell-Detailed-Report.pdf) is a more detailed report covering our findings on the situation in Lowell.
+* [Community-Centered Redistricting in Lowell, Massachusetts](/Lowell-Report), is an introduction to ranked choice voting (RCV) and districts and the choice on the ballot in November.
+* [Findings on the City of Lowell’s Election Systems](/Lowell-Detailed-Report) is a more detailed report covering our findings on the situation in Lowell.
 
 
 ## Draw your own districts
