--- a/_posts/2019-10-21-lowell.md
+++ b/_posts/2019-10-21-lowell.md
@@ -1,5 +1,5 @@
 ---
-title: Study of Reform Proposals for Lowell City Council
+title: Election Reform in Lowell, MA
 date: 2019-10-21 00:00:00 Z
 categories:
   - reports
@@ -9,12 +9,14 @@ featured: true
 permalink: /lowell
 ---
 
-Two years ago, the City of Lowell was sued because its system of election prevented minority communities from being represented in city government. For example, even though there are 9 members of the City Council—and nearly half of Lowell’s population is Asian or Hispanic—there have only been 2 people of color elected to the City Council in 20 years!
+Two years ago, the City of Lowell was sued because its system of election was said to prevent minority communities from being represented in city government. For example, even though there are 9 members of the City Council—and nearly half of Lowell’s population is Asian or Hispanic—there have only been 2 people of color elected to the City Council in 20 years!
 
 We have two reports, which you can download here:
-* [Community-Centered Redistricting in Lowell, Massachusetts](/Lowell-Report), is an introduction to ranked choice voting (RCV) and districts and the choice on the ballot in November.
-* [Findings on the City of Lowell’s Election Systems](/Lowell-Detailed-Report) is a more detailed report covering our findings on the situation in Lowell.
 
+* [Public Report](/Lowell-Report) with explanations of alternatives, pros and cons, and some of our findings (non-technical)
+* [Detailed Report](/Lowell-Detailed-Report) explaining the models we used in our study (technical)
+
+Versions of the public report in Spanish, Portuguese, and Cambodian Khmer are coming soon!
 
 ## Draw your own districts
 
