Fix broken link for EI interactive.

--- a/_posts/2018-08-01-ei.md
+++ b/_posts/2018-08-01-ei.md
@@ -4,7 +4,7 @@ date: 2018-08-01 00:00:00 Z
 authors: VRDI
 description: |2-
    Ecological inference (EI) is the main statistical technique used to establish racially polarized voting (RPV). A team at the 2018 Voting Rights Data Institute created R Shiny apps making it possible for anyone to run an ecological inference analysis.
-  <ul> <li><a href="http://tinyurl.com/gerryEI" target="_blank">Interactive introduction to EI</a></li> <li><a href="https://vrdi.shinyapps.io/ei-app/" target="_blank">2x2</a> tool, for two racial groups and two candidates;</li> <li><a href="https://vrdi.shinyapps.io/ei-app-RxC/" target="_blank">RxC</a> tool, for more groups and candidates.</li> </ul>
+  <ul> <li><a href="http://arcg.is/1yzKGn" target="_blank">Interactive introduction to EI</a></li> <li><a href="https://vrdi.shinyapps.io/ei-app/" target="_blank">2x2</a> tool, for two racial groups and two candidates;</li> <li><a href="https://vrdi.shinyapps.io/ei-app-RxC/" target="_blank">RxC</a> tool, for more groups and candidates.</li> </ul>
 categories: [code]
 href: https://vrdi.shinyapps.io/ei-app/
 ---
