Update job posting.

--- a/_posts/2019-04-29-jobs.md
+++ b/_posts/2019-04-29-jobs.md
@@ -3,7 +3,6 @@ title: Jobs at MGGG
 date: 2019-04-29
 authors: MGGG
 categories:
- - news
 layout: post
 permalink: /jobs
 excerpt_separator: "<!--more-->"
@@ -22,14 +21,18 @@ redistricting. Our mission is both technical and civic, and we aim to drive
 cutting-edge research, amplify the voices of the public and the civil rights
 community, and improve accountability in the redistricting process.
 
-As of July, we are still searching for a **[Software Developer](#software-developer)**. 
-Letters of interest are being accepted
+<!-- Letters of interest are being accepted
 by email to [jobs@mggg.org](mailto:jobs@mggg.org). Please include a CV with
-links to relevant projects, with your GitHub username if applicable. 
+links to relevant projects, with your GitHub username if applicable.  -->
 
 Access to voting rights for communities of color and other marginalized groups
 is central to our mission, and we strive to build a team that is diverse in as
 many ways as possible.
+
+We are not currently hiring.  Please check this page in the future for any updates to our openings.
+
+
+
 
 <ul class="card-list">
 {% assign jobs = site.jobs | sort: "position" %}
