--- a/_posts/2019-09-20-recom.md
+++ b/_posts/2019-09-20-recom.md
@@ -1,6 +1,7 @@
 ---
 title: "Recombination Markov Chains"
 date: 2019-09-20 00:00:00 Z
+image: "/uploads/recom.png"
 categories:
   - research
 authors: MGGG
