--- a/_posts/2020-10-2-capy.md
+++ b/_posts/2020-10-2-capy.md
@@ -1,6 +1,7 @@
 ---
 title: "Clustering propensity: A mathematical framework for measuring segregation"
 date: 2020-10-2 00:00:00 Z
+image: "/uploads/capy.png"
 categories:
   - research
 authors: MGGG
