--- a/_posts/2019-04-29-jobs.md
+++ b/_posts/2019-04-29-jobs.md
@@ -1,6 +1,6 @@
 ---
 title: Jobs at MGGG
-date: 2019-04-29
+date: 2021-02-11
 authors: MGGG
 categories:
 layout: post
@@ -8,7 +8,7 @@ permalink: /jobs
 excerpt_separator: "<!--more-->"
 featured: true
 description: "We have been hiring for several positions (**Software
-Developer**, **Geographer**, and **Data Scientist**) through the Tisch College of Civic Life at
+Developer**) through the Tisch College of Civic Life at
 Tufts University. Letters of interest are being accepted by email to [jobs@mggg.org](mailto:jobs@mggg.org).
 
 
@@ -21,15 +21,16 @@ redistricting. Our mission is both technical and civic, and we aim to drive
 cutting-edge research, amplify the voices of the public and the civil rights
 community, and improve accountability in the redistricting process.
 
-<!-- Letters of interest are being accepted
+As of February 2021, we are currently looking for a **[Software Developer](#software-developer)**.
+Letters of interest are being accepted
 by email to [jobs@mggg.org](mailto:jobs@mggg.org). Please include a CV with
-links to relevant projects, with your GitHub username if applicable.  -->
+links to relevant projects, with your GitHub username if applicable. 
 
 Access to voting rights for communities of color and other marginalized groups
 is central to our mission, and we strive to build a team that is diverse in as
 many ways as possible.
 
-We are not currently hiring.  Please check this page in the future for any updates to our openings.
+<!-- We are not currently hiring.  Please check this page in the future for any updates to our openings. -->
 
 
 
