--- a/_posts/2019-04-29-jobs.md
+++ b/_posts/2019-04-29-jobs.md
@@ -7,8 +7,7 @@ layout: post
 permalink: /jobs
 excerpt_separator: "<!--more-->"
 featured: true
-description: "We have been hiring for several positions (**Software
-Developer**) through the Tisch College of Civic Life at
+description: "We have been hiring for a Software Developer through the Tisch College of Civic Life at
 Tufts University. Letters of interest are being accepted by email to [jobs@mggg.org](mailto:jobs@mggg.org).
 
 
