--- a/_posts/2021-02-12-open-maps.md
+++ b/_posts/2021-02-12-open-maps.md
@@ -9,12 +9,10 @@ featured: true
 layout: post
 ---
 
-The Metric Geometry and Gerrymandering Group (MGGG), in partnership with the Ohio State University’s [Kirwan Institute for the Study for Race and Ethnicity](https://kirwaninstitute.osu.edu/), is excited to announce OPEN Maps, a participatory mapping project focused on gathering Community of Interest maps throughout Ohio.
+MGGG, in partnership with the Ohio State University’s [Kirwan Institute for the Study for Race and Ethnicity](https://kirwaninstitute.osu.edu/), is excited to announce OPEN Maps, a participatory mapping project focused on gathering Community of Interest maps throughout Ohio.
 
-A Community of Interest, or COI, is a group with significant shared interests that should be given careful consideration when drawing district boundaries. Preserving Communities of Interest is generally considered an important ingredient of fair redistricting but, in practice, difficult to implement without local knowledge of where communities live. 
+A Community of Interest, or COI, is a group with significant shared interests that should be given careful consideration when drawing district boundaries. Prioritizing Communities of Interest is generally considered to be an essential ingredient of fair redistricting but, in practice, it is prohibitively difficult to implement without local community knowledge.
 
-This spring, the Ohio Organizing Collaborative will work with grassroots organizations to spearhead a map collection effort. Our goal is to collect 2,000+ community maps and summarize our findings for the State Legislature and Redistricting Commission. Ohioans can use [Districtr](http://districtr.org/ohio), a free community web tool developed by MGGG, to draw your COI, mark important places, and write narratives about community needs. Our submission portal will launch by March 1st and remain open until the end of June.
+This spring, the Ohio Organizing Collaborative will work with grassroots organizations to spearhead a map collection effort. Our goal is to collect community maps from all over the state, making sure to amplify the voices of marginalized groups, and then summarize our findings for the line-drawers to use when they make new maps. Ohioans can use [Districtr](http://districtr.org/ohio), the free community web tool developed by MGGG, to draw COIs, mark important places, and write narratives about community needs. 
 
-This effort will run parallel to the official redistricting process, designed with minimal opportunities for Ohioans to tell the line drawers what matters. The team has already launched new Districtr modules to start collecting community maps.
-
-Register for one of our weekly training sessions if you want to learn more about Communities of Interest and how you can use Districtr to share your maps. Reach out to [Districtr@mggg.org](mailto:Districtr@mggg.org) if you want to become a community partner!
+Register for one of our [weekly training sessions](http://mggg.org/TTT.pdf) if you want to learn more about Communities of Interest and how you can use Districtr to share your maps. Reach out to [Districtr@mggg.org](mailto:Districtr@mggg.org) if you want to become a community partner!
