--- a/_posts/2021-02-12-open-maps.md
+++ b/_posts/2021-02-12-open-maps.md
@@ -1,5 +1,5 @@
 ---
-title: Ohio Public Engagement in Neighborhoods
+title: OPEN Maps – the “Ohio Public Engagement in Neighborhoods” Mapping project
 date:  2021-02-12 00:00:00 Z
 authors: MGGG
 categories:
