jobs page in news header

--- a/_posts/2019-04-29-jobs.md
+++ b/_posts/2019-04-29-jobs.md
@@ -3,6 +3,7 @@ title: Jobs at MGGG
 date: 2021-02-11
 authors: MGGG
 categories:
+    - news
 layout: post
 permalink: /jobs
 excerpt_separator: "<!--more-->"
