--- a/_posts/2021-02-12-open-maps.md
+++ b/_posts/2021-02-12-open-maps.md
@@ -9,7 +9,7 @@ featured: true
 layout: post
 ---
 
-MGGG, in partnership with the Ohio State University’s [Kirwan Institute for the Study for Race and Ethnicity](https://kirwaninstitute.osu.edu/), is excited to announce OPEN Maps, a participatory mapping project focused on gathering Community of Interest maps throughout Ohio.
+MGGG, in partnership with the Ohio State University’s [Kirwan Institute for the Study of Race and Ethnicity](https://kirwaninstitute.osu.edu/), is excited to announce OPEN Maps, a participatory mapping project focused on gathering Community of Interest maps throughout Ohio.
 
 A Community of Interest, or COI, is a group with significant shared interests that should be given careful consideration when drawing district boundaries. Prioritizing Communities of Interest is generally considered to be an essential ingredient of fair redistricting but, in practice, it is prohibitively difficult to implement without local community knowledge.
 
