--- a/_posts/2021-02-12-open-maps.md
+++ b/_posts/2021-02-12-open-maps.md
@@ -15,4 +15,4 @@ A Community of Interest, or COI, is a group with significant shared interests th
 
 This spring, the Ohio Organizing Collaborative will work with grassroots organizations to spearhead a map collection effort. Our goal is to collect community maps from all over the state, making sure to amplify the voices of marginalized groups, and then summarize our findings for the line-drawers to use when they make new maps. Ohioans can use [Districtr](http://districtr.org/ohio), the free community web tool developed by MGGG, to draw COIs, mark important places, and write narratives about community needs. 
 
-Register for one of our [weekly training sessions](http://mggg.org/TTT.pdf) if you want to learn more about Communities of Interest and how you can use Districtr to share your maps. Reach out to [Districtr@mggg.org](mailto:Districtr@mggg.org) if you want to become a community partner!
+Register for one of our [weekly training sessions](http://mggg.org/TTT.pdf?v=2) if you want to learn more about Communities of Interest and how you can use Districtr to share your maps. Reach out to [Districtr@mggg.org](mailto:Districtr@mggg.org) if you want to become a community partner!
